--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -20,25 +20,16 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/gymlogo" />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageButton
-            android:id="@+id/nav_header_main_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:background="@null"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:tint="?android:attr/textColorPrimary"
-            app:srcCompat="@drawable/ic_settings_black_24dp" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="start">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -53,6 +44,19 @@
                 android:layout_height="wrap_content"
                 android:text="@string/subtitle" />
         </LinearLayout>
-    </FrameLayout>
+
+        <ImageButton
+            android:id="@+id/nav_header_main_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:background="@null"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:tint="?android:attr/textColorPrimary"
+            app:srcCompat="@drawable/ic_settings_black_24dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
