--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -3,6 +3,9 @@
     <release
         version="1.1.3"
         versioncode="113">
+        <change>Verbergen von Menü-Einträgen</change>
+        <change>Schülerzeitung hinzugefügt</change>
+        <change>Routennavigation hinzugefügt</change>
         <change>Neue Teilen-Nachricht</change>
     </release>
     <release
