--- a/app/src/main/res/xml/preferences_hide_menu_items.xml
+++ b/app/src/main/res/xml/preferences_hide_menu_items.xml
@@ -23,8 +23,23 @@
         app:iconSpaceReserved="true" />
     <SwitchPreference
         android:defaultValue="true"
+        android:key="menu_news"
+        android:title="@string/menu_news"
+        app:iconSpaceReserved="false" />
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="menu_shop"
+        android:title="@string/menu_shop"
+        app:iconSpaceReserved="false" />
+    <SwitchPreference
+        android:defaultValue="true"
         android:key="menu_call_office"
         android:title="@string/menu_call_office"
+        app:iconSpaceReserved="false" />
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="menu_navigation"
+        android:title="@string/menu_navigation"
         app:iconSpaceReserved="false" />
     <SwitchPreference
         android:defaultValue="true"
