--- a/app/src/main/res/layout/card_legal.xml
+++ b/app/src/main/res/layout/card_legal.xml
@@ -105,7 +105,7 @@
 
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ImageView
                 android:layout_width="24dp"
