renamed vertretungsplan to substitutionplan

--- a/Javadocs/com/asdoi/gymwen/ui/fragments/VertretungFragment.html
+++ b/Javadocs/com/asdoi/gymwen/ui/fragments/VertretungFragment.html
@@ -114,7 +114,7 @@ var activeTableTab = "activeTableTab";
                 <li>androidx.fragment.app.Fragment</li>
                 <li>
                     <ul class="inheritance">
-                        <li>com.asdoi.gymwen.ui.fragments.VertretungFragment</li>
+                        <li>com.asdoi.gymwen.ui.fragments.SubstitutionFragment</li>
                     </ul>
                 </li>
             </ul>
@@ -413,7 +413,7 @@ implements android.view.View.OnClickListener</pre>
                                 <dl>
                                     <dt><span class="seeLabel">See Also:</span></dt>
                                     <dd>
-                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Both">Constant
+                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Both">Constant
                                             Field Values</a></dd>
                                 </dl>
                             </li>
@@ -428,7 +428,7 @@ implements android.view.View.OnClickListener</pre>
                                 <dl>
                                     <dt><span class="seeLabel">See Also:</span></dt>
                                     <dd>
-                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Today">Constant
+                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Today">Constant
                                             Field Values</a></dd>
                                 </dl>
                             </li>
@@ -443,7 +443,7 @@ implements android.view.View.OnClickListener</pre>
                                 <dl>
                                     <dt><span class="seeLabel">See Also:</span></dt>
                                     <dd>
-                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Tomorrow">Constant
+                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Tomorrow">Constant
                                             Field Values</a></dd>
                                 </dl>
                             </li>
@@ -458,7 +458,7 @@ implements android.view.View.OnClickListener</pre>
                                 <dl>
                                     <dt><span class="seeLabel">See Also:</span></dt>
                                     <dd>
-                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Today_All">Constant
+                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Today_All">Constant
                                             Field Values</a></dd>
                                 </dl>
                             </li>
@@ -473,7 +473,7 @@ implements android.view.View.OnClickListener</pre>
                                 <dl>
                                     <dt><span class="seeLabel">See Also:</span></dt>
                                     <dd>
-                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.VertretungFragment.Instance_Tomorrow_All">Constant
+                                        <a href="../../../../../constant-values.html#com.asdoi.gymwen.ui.fragments.SubstitutionFragment.Instance_Tomorrow_All">Constant
                                             Field Values</a></dd>
                                 </dl>
                             </li>
