renamed vertretung to substitution

--- a/Javadocs/com/asdoi/gymwen/ui/fragments/LehrerlisteFragment.html
+++ b/Javadocs/com/asdoi/gymwen/ui/fragments/LehrerlisteFragment.html
@@ -114,7 +114,7 @@ var activeTableTab = "activeTableTab";
                 <li>androidx.fragment.app.Fragment</li>
                 <li>
                     <ul class="inheritance">
-                        <li>com.asdoi.gymwen.ui.fragments.LehrerlisteFragment</li>
+                        <li>com.asdoi.gymwen.ui.fragments.TeacherListFragment</li>
                     </ul>
                 </li>
             </ul>
