--- a/app/src/main/res/layout/list_substitution_all_entry.xml
+++ b/app/src/main/res/layout/list_substitution_all_entry.xml
@@ -4,82 +4,76 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
-    android:gravity="center"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/vertretung_specific_entry_textViewHour"
+        android:id="@+id/substitution_all_entry_textViewCourse"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_specific_entry_hour"
-        android:background="?attr/colorAccent"
-        android:gravity="center"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:textColor="@android:color/white"
-        android:textSize="36sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/vertretung_specific_entry_textViewSubject"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_specific_entry_subject"
+        android:layout_weight="@integer/substitution_all_course"
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
-        android:id="@+id/vertretung_specific_entry_textViewTeacher"
-        android:layout_gravity="center"
+        android:id="@+id/substitution_all_entry_textViewHour"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_specific_entry_teacher"
+        android:layout_weight="@integer/substitution_all_hour"
         android:gravity="center"
         android:textSize="18sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
-        android:id="@+id/vertretung_specific_entry_textViewRoom"
+        android:id="@+id/substitution_all_entry_textViewSubject"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_specific_entry_room"
+        android:layout_weight="@integer/substitution_all_subject"
         android:gravity="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="?colorAccent" />
+        android:textSize="18sp"
+        android:textStyle="normal"
+        android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
-        android:id="@+id/vertretung_specific_entry_textViewOther"
+        android:id="@+id/substitution_all_entry_textViewTeacher"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_specific_entry_other"
+        android:layout_weight="@integer/substitution_all_teacher"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:textStyle="normal"
+        android:textColor="?android:attr/textColorSecondary" />
+
+    <TextView
+        android:id="@+id/substitution_all_entry_textViewRoom"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_weight="@integer/substitution_all_room"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:textStyle="normal"
+        android:textColor="?android:attr/textColorSecondary" />
+
+    <TextView
+        android:id="@+id/substitution_all_entry_textViewOther"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:layout_weight="@integer/substitution_all_other"
         android:gravity="center"
         android:textSize="16sp"
-        android:textStyle="bold"
         android:textColor="?android:attr/textColorSecondary"
         android:textIsSelectable="true" />
-
-    <TextView
-        android:id="@+id/vertretung_specific_entry_textViewClass"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_weight="@integer/vertretung_specific_entry_course"
-        android:gravity="center"
-        android:textSize="12sp"
-        android:textColor="?android:attr/textColorSecondary" />
-
 
 </LinearLayout>
