--- a/app/src/main/res/layout/list_substitution_specific_entry.xml
+++ b/app/src/main/res/layout/list_substitution_specific_entry.xml
@@ -4,76 +4,82 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
+    android:gravity="center"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/vertretung_all_entry_textViewCourse"
+        android:id="@+id/substitution_specific_entry_textViewHour"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_all_course"
+        android:layout_weight="@integer/substitution_specific_entry_hour"
+        android:background="?attr/colorAccent"
+        android:gravity="center"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:textColor="@android:color/white"
+        android:textSize="36sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/substitution_specific_entry_textViewSubject"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_weight="@integer/substitution_specific_entry_subject"
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
-        android:id="@+id/vertretung_all_entry_textViewHour"
+        android:id="@+id/substitution_specific_entry_textViewTeacher"
+        android:layout_gravity="center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_all_hour"
+        android:layout_weight="@integer/substitution_specific_entry_teacher"
         android:gravity="center"
         android:textSize="18sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         android:textColor="?android:attr/textColorSecondary" />
 
     <TextView
-        android:id="@+id/vertretung_all_entry_textViewSubject"
+        android:id="@+id/substitution_specific_entry_textViewRoom"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_all_subject"
+        android:layout_weight="@integer/substitution_specific_entry_room"
         android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:textColor="?android:attr/textColorSecondary" />
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="?colorAccent" />
 
     <TextView
-        android:id="@+id/vertretung_all_entry_textViewTeacher"
+        android:id="@+id/substitution_specific_entry_textViewOther"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_all_teacher"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:textColor="?android:attr/textColorSecondary" />
-
-    <TextView
-        android:id="@+id/vertretung_all_entry_textViewRoom"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
-        android:layout_weight="@integer/vertretung_all_room"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:textColor="?android:attr/textColorSecondary" />
-
-    <TextView
-        android:id="@+id/vertretung_all_entry_textViewOther"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_weight="@integer/vertretung_all_other"
+        android:layout_weight="@integer/substitution_specific_entry_other"
         android:gravity="center"
         android:textSize="16sp"
+        android:textStyle="bold"
         android:textColor="?android:attr/textColorSecondary"
         android:textIsSelectable="true" />
+
+    <TextView
+        android:id="@+id/substitution_specific_entry_textViewClass"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:layout_weight="@integer/substitution_specific_entry_course"
+        android:gravity="center"
+        android:textSize="12sp"
+        android:textColor="?android:attr/textColorSecondary" />
+
 
 </LinearLayout>
