--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--    Vertretung Specific entry-->
-    <integer name="vertretung_specific_entry_hour">3</integer>
-    <integer name="vertretung_specific_entry_subject">3</integer>
-    <integer name="vertretung_specific_entry_teacher">2</integer>
-    <integer name="vertretung_specific_entry_room">3</integer>
-    <integer name="vertretung_specific_entry_other">4</integer>
-    <integer name="vertretung_specific_entry_course">1</integer>
+    <!--    substitutionplan Specific entry-->
+    <integer name="substitution_specific_entry_hour">3</integer>
+    <integer name="substitution_specific_entry_subject">3</integer>
+    <integer name="substitution_specific_entry_teacher">2</integer>
+    <integer name="substitution_specific_entry_room">3</integer>
+    <integer name="substitution_specific_entry_other">4</integer>
+    <integer name="substitution_specific_entry_course">1</integer>
 
-    <integer name="vertretung_specific_entry_hour_long">4</integer>
-    <integer name="vertretung_specific_entry_subject_long">3</integer>
+    <integer name="substitution_specific_entry_hour_long">4</integer>
+    <integer name="substitution_specific_entry_subject_long">3</integer>
 
-    <!--    Vertretung All entry-->
-    <integer name="vertretung_all_hour">1</integer>
-    <integer name="vertretung_all_subject">2</integer>
-    <integer name="vertretung_all_teacher">2</integer>
-    <integer name="vertretung_all_room">2</integer>
-    <integer name="vertretung_all_other">4</integer>
-    <integer name="vertretung_all_course">2</integer>
+    <!--    substitutionplan All entry-->
+    <integer name="substitution_all_hour">1</integer>
+    <integer name="substitution_all_subject">2</integer>
+    <integer name="substitution_all_teacher">2</integer>
+    <integer name="substitution_all_room">2</integer>
+    <integer name="substitution_all_other">4</integer>
+    <integer name="substitution_all_course">2</integer>
 
-    <integer name="vertretung_all_hour_long">3</integer>
+    <integer name="substitution_all_hour_long">3</integer>
 
 </resources>
