--- a/app/src/main/res/xml/preferences_root.xml
+++ b/app/src/main/res/xml/preferences_root.xml
@@ -31,7 +31,7 @@
 
 
     <PreferenceCategory
-        android:title="@string/set_other_title"
+        android:title="@string/set_miscellaneous_title"
         app:iconSpaceReserved="false">
         <SwitchPreference
             android:defaultValue="false"
