--- a/app/src/main/res/xml/substitutionplan_widget_info.xml
+++ b/app/src/main/res/xml/substitutionplan_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/widget_substitutionplan"
     android:minWidth="266dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/widget_preview"
+    android:previewImage="@drawable/substituion_widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="7200000"
     android:widgetCategory="home_screen" />
