--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,6 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
 
     <dimen name="nav_header_settings_padding">7dp</dimen>
 
+    <dimen name="title_new_padding">10dp</dimen>
+
 </resources>
