--- a/app/src/main/res/layout/substitution_title_new.xml
+++ b/app/src/main/res/layout/substitution_title_new.xml
@@ -1,38 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/substitution_new_background"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/substitution_new_title"
+    <LinearLayout
+        android:id="@+id/substitution_new_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="30dp"
-        android:gravity="center"
-        android:text="Heute"
-        android:textColor="#FFE0E0E0"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical"
+        android:padding="@dimen/title_new_padding">
 
-    <TextView
-        android:id="@+id/substitution_new_title_desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="15dp"
-        android:gravity="center"
-        android:text="03.03.2020, B"
-        android:textColor="#FFE0E0E0"
-        android:textSize="24sp" />
+        <TextView
+            android:id="@+id/substitution_new_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Heute"
+            android:textColor="#FFE0E0E0"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/substitution_new_title_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="03.03.2020, B"
+            android:textColor="#FFE0E0E0"
+            android:textSize="24sp" />
+    </LinearLayout>
 
 </LinearLayout>
 
