--- a/app/src/main/res/xml/preferences_substitutionplan.xml
+++ b/app/src/main/res/xml/preferences_substitutionplan.xml
@@ -11,29 +11,39 @@
     <SwitchPreference
         android:defaultValue="false"
         android:key="hours"
+        android:summary="@string/set_desc_hours"
         android:title="@string/set_hours"
-        app:iconSpaceReserved="false"
-        android:summary="@string/set_desc_hours" />
+        app:iconSpaceReserved="false" />
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="summarize"
+        android:title="Stunden zusammenfassen"
+        app:iconSpaceReserved="false" />
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="summarize_old"
+        android:title="Auch beim alten Design"
+        app:iconSpaceReserved="true" />
     <SwitchPreference
         android:defaultValue="false"
         android:key="week_dates"
+        android:summary="@string/set_desc_week_dates"
         android:title="@string/set_show_weekdates"
-        app:iconSpaceReserved="false"
-        android:summary="@string/set_desc_week_dates" />
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="show_full_names"
+        android:summary="@string/set_desc_show_full_names"
         android:title="@string/set_full_names"
-        app:iconSpaceReserved="false"
-        android:summary="@string/set_desc_show_full_names" />
+        app:iconSpaceReserved="false" />
     <SwitchPreference
         android:defaultValue="true"
         android:key="show_full_names_specific"
         android:title="@string/set_full_names_specific"
         app:iconSpaceReserved="true" />
     <Preference
+        android:summary="@string/set_desc_credentials_fragment"
         android:title="@string/set_substitution_signin"
         app:fragment="com.asdoi.gymwen.ui.settingsFragments.SettingsFragmentSignIn"
-        app:iconSpaceReserved="false"
-        android:summary="@string/set_desc_credentials_fragment" />
+        app:iconSpaceReserved="false" />
 </PreferenceScreen>
