--- a/app/src/main/res/layout/list_substitution_specific_card.xml
+++ b/app/src/main/res/layout/list_substitution_specific_card.xml
@@ -25,6 +25,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/list_substituion_widget_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
