--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,8 +28,8 @@
 
 
     <!-- Substitution New Design -->
-    <color name="past">#3AC540</color>
-    <color name="today">#F44336</color>
+    <color name="past">#3F51B5</color>
+    <color name="today">#B2180F</color>
     <color name="tomorrow">#FFC107</color>
     <color name="future">#3AC540</color>
 
