--- a/app/src/main/res/xml/preferences_substitutionplan.xml
+++ b/app/src/main/res/xml/preferences_substitutionplan.xml
@@ -20,7 +20,7 @@
         android:title="Stunden zusammenfassen"
         app:iconSpaceReserved="false" />
     <SwitchPreference
-        android:defaultValue="false"
+        android:defaultValue="true"
         android:key="summarize_old"
         android:title="Auch beim alten Design"
         app:iconSpaceReserved="true" />
