--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -20,5 +20,6 @@
     <integer name="substitution_all_course">2</integer>
 
     <integer name="substitution_all_hour_long">3</integer>
+    <integer name="substitution_all_hour_summary">2</integer>
 
 </resources>
