--- a/app/src/main/res/menu/main_activity_drawer.xml
+++ b/app/src/main/res/menu/main_activity_drawer.xml
@@ -13,7 +13,7 @@
                 <item
                     android:id="@+id/nav_today_both"
                     android:icon="@drawable/ic_today_black_24dp"
-                    android:title="@string/tomorrow" />
+                    android:title="@string/today" />
                 <item
                     android:id="@+id/nav_tomorrow_both"
                     android:icon="@drawable/ic_tomorrow_black_24dp"
