--- a/app/src/main/res/xml/preferences_hide_menu_items.xml
+++ b/app/src/main/res/xml/preferences_hide_menu_items.xml
@@ -4,6 +4,7 @@
     <SwitchPreference
         android:defaultValue="true"
         android:key="menu_both"
+        android:summary="Wird, auch falls deaktiviert, immer beim ersten App-Start geladen!"
         android:title="@string/menu_both"
         app:iconSpaceReserved="false" />
     <SwitchPreference
