--- a/app/src/main/res/layout/refresh_widget.xml
+++ b/app/src/main/res/layout/refresh_widget.xml
@@ -25,7 +25,7 @@
         android:text="@string/set_substitution_category"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorWidgetForeground"
-        android:textSize="10dp"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
 
