--- a/app/src/main/res/layout/summary_widget.xml
+++ b/app/src/main/res/layout/summary_widget.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
         android:layout_weight="2"
-        android:contentDescription="mail"
+        android:contentDescription="@string/set_substitution_category"
         android:tint="@color/colorWidgetForeground"
         app:srcCompat="@drawable/ic_stat_assignment_late" />
 
@@ -27,20 +27,6 @@
         android:text="\?"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorWidgetForeground"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tvAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:ellipsize="end"
-        android:lines="1"
-        android:text="account"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/colorWidgetForeground"
-        android:textSize="12dp"
-        android:visibility="gone" />
 </LinearLayout>
