--- a/app/src/main/res/xml/preferences_hide_menu_items.xml
+++ b/app/src/main/res/xml/preferences_hide_menu_items.xml
@@ -10,7 +10,7 @@
     <SwitchPreference
         android:defaultValue="true"
         android:key="show_days"
-        android:title="Tage einzeln anzeigen"
+        android:title="@string/set_single_days"
         app:iconSpaceReserved="false" />
     <SwitchPreference
         android:defaultValue="false"
