--- a/app/src/main/res/xml/preferences_design.xml
+++ b/app/src/main/res/xml/preferences_design.xml
@@ -14,45 +14,46 @@
             app:iconSpaceReserved="false" />
         <Preference
             android:key="accentColor"
+            android:summary="@string/set_desc_accentColor"
             android:title="@string/color_accent"
-            app:iconSpaceReserved="false"
-            android:summary="@string/set_desc_accentColor" />
+            app:iconSpaceReserved="false" />
         <Preference
             android:key="primaryColor"
+            android:summary="@string/set_desc_primaryColor"
             android:title="@string/color_primary"
-            app:iconSpaceReserved="false"
-            android:summary="@string/set_desc_primaryColor" />
+            app:iconSpaceReserved="false" />
         <Preference
+            android:summary="@string/set_desc_menu_items_fragment"
             android:title="Menüeinträge"
             app:fragment="com.asdoi.gymwen.ui.settingsFragments.SettingsFragmentHideMenuItems"
-            app:iconSpaceReserved="false"
-            android:summary="@string/set_desc_menu_items_fragment" />
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
     <PreferenceCategory
         android:title="@string/set_substitution_category"
         app:iconSpaceReserved="false">
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="old_vertretung"
+            android:summary="@string/set_desc_old_substitution"
+            android:title="@string/set_old_substitution"
+            app:iconSpaceReserved="false" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="old_vertretung_title"
+            android:summary="@string/set_desc_old_title"
+            android:title="@string/set_old_title"
+            app:iconSpaceReserved="true" />
 
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="show_borders"
+            android:summary="@string/set_desc_show_borders"
             android:title="@string/set_show_borders"
-            app:iconSpaceReserved="false"
-            android:summary="@string/set_desc_show_borders" />
+            app:iconSpaceReserved="false" />
         <SwitchPreference
             android:defaultValue="true"
             android:key="show_border_specific"
             android:title="@string/set_show_borders_specific"
-            app:iconSpaceReserved="true" />
-        <SwitchPreference
-            android:defaultValue="false"
-            android:key="old_vertretung"
-            android:title="@string/set_old_substitution"
-            app:iconSpaceReserved="false"
-            android:summary="@string/set_desc_old_substitution" />
-        <SwitchPreference
-            android:defaultValue="false"
-            android:key="old_vertretung_title"
-            android:title="Altes Title Design"
             app:iconSpaceReserved="true" />
     </PreferenceCategory>
 </PreferenceScreen>
