--- a/app/src/main/res/layout/widget_refresh.xml
+++ b/app/src/main/res/layout/widget_refresh.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        app:srcCompat="@drawable/ic_refresh_black_24dp" />
+        android:src="@drawable/ic_refresh_black_24dp" />
 
     <TextView
         android:layout_width="wrap_content"
