--- a/app/src/main/res/layout/widget_substitution.xml
+++ b/app/src/main/res/layout/widget_substitution.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/widget2_frame"
+    android:id="@+id/widget_substitution_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/widget2_listview"
+        android:id="@+id/widget_substitution_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null" />
 
     <ImageButton
-        android:id="@+id/widget2_refresh_button"
+        android:id="@+id/widget_substiution_refresh_button"
         android:layout_width="@dimen/widget_image_width"
         android:layout_height="@dimen/widget_image_height"
         android:layout_gravity="end"
         android:contentDescription="@string/action_refresh"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/ic_refresh_black_24dp" />
+        android:src="@drawable/ic_refresh_black_24dp" />
 
     <ImageButton
-        android:id="@+id/widget2_open_button"
+        android:id="@+id/widget_substitution_open_button"
         android:layout_width="@dimen/widget_image_width"
         android:layout_height="@dimen/widget_image_height"
         android:layout_gravity="start"
         android:contentDescription="@string/open_app"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/ic_open_in_browser_white_24dp" />
+        android:src="@drawable/ic_open_in_browser_white_24dp" />
 </FrameLayout>
