--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -3,9 +3,12 @@
     <release
         version="1.1.3"
         versioncode="113">
-        <change>Verbergen von Menü-Einträgen</change>
         <change>Schülerzeitung hinzugefügt</change>
         <change>Routennavigation hinzugefügt</change>
+        <change>Einstellung zum Verbergen von Menü-Einträgen hinzugefügt</change>
+        <change>Neues Design verfollständigt</change>
+        <change>Vergrößerbare Bilder auf der Homepage</change>
+        <change>Beschreibungen der Einstellungen hinzugefügt</change>
         <change>Neue Teilen-Nachricht</change>
     </release>
     <release
