--- a/app/src/main/res/xml/refresh_widget_info.xml
+++ b/app/src/main/res/xml/refresh_widget_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/refresh_widget"
-    android:initialLayout="@layout/refresh_widget"
+    android:initialKeyguardLayout="@layout/widget_refresh"
+    android:initialLayout="@layout/widget_refresh"
     android:minWidth="40dp"
     android:minHeight="40dp"
     android:previewImage="@drawable/refresh_widget_preview"
