--- a/app/src/main/res/xml/summary_widget_info.xml
+++ b/app/src/main/res/xml/summary_widget_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/summary_widget"
-    android:initialLayout="@layout/summary_widget"
+    android:initialKeyguardLayout="@layout/widget_summary"
+    android:initialLayout="@layout/widget_summary"
     android:minWidth="40dp"
     android:minHeight="40dp"
     android:previewImage="@drawable/summary_widget_preview"
