added click picture to minimize message in website

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -9,7 +9,7 @@
         <change>Routennavigation hinzugefügt</change>
         <change>Einstellung zum Verbergen von Menü-Einträgen hinzugefügt</change>
         <change>Neues Design verfollständigt</change>
-        <change>Individulalisierbares Design</change>
+        <change>Individulalisierbares Design (-> Einstellungen)</change>
         <change>Vergrößerbare Bilder auf der Homepage</change>
         <change>Beschreibungen der Einstellungen hinzugefügt</change>
         <change>Neue Screenshots in ColoRush</change>
