summarize up for widget && background if loading

--- a/app/src/main/res/layout/widget_substitution.xml
+++ b/app/src/main/res/layout/widget_substitution.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/widget_substitution_frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/widget_white">
 
     <ListView
         android:id="@+id/widget_substitution_listview"
