underlined daytitle and network check in website

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,6 @@
     <color name="tomorrow_text">@android:color/black</color>
     <color name="future_text">@android:color/black</color>
     <color name="nothing_text">@android:color/black</color>
+
+    <color name="nothing_background_light">#BFFF0000</color>
 </resources>
